# onlyvips

./: .gitignore  CHANGELOG.MD  README-PROD-ROLLOUT.md  README.md  ROADMAP.MD  SECURITY.md  doc-env-example.md  install.sh  jetton-ajx-metadata.json  package-lock.json  package.json  pyproject.toml
backend-api/: API_ENDPOINTS.md  CHANGELOG.md  Dockerfile  Dockerfile.production  README.md  main.py  package-lock.json  package.json  profile.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_api.py  tsconfig.json
backend-api/app/: main.py
backend-api/app/api/: api.py
backend-api/app/config/: tasks.json
backend-api/app/controllers/: ton-payment.ts
backend-api/app/core/: auth.py  config.py  database.py  db_interface.py  memory_db.py  mongodb_db.py  openai_client.py  secrets_provider.py  sentry_config.py
backend-api/app/db/: database.py
backend-api/app/middleware/: input_validation.py  jwt_security.py  metrics_middleware.py  rate_limiting.py
backend-api/app/routes/: content.ts  creator-panel.ts  creators.ts  index.ts  payments.ts
backend-api/app/utils/: cache.py  logger.py  password.py
backend-api/docs/: CHANGES.md  GETTING_STARTED.md  grafana-dashboard.json
backend-api/examples/: ai_client_example.py  env.aws-ssm  env.standard  env.vault
backend-api/src/: index.ts
backend-api/src/middleware/: authMiddleware.ts
backend-api/src/models/: content.ts  index.ts  package.ts  task.ts  user.ts  verification.ts
backend-api/src/routes/: analytics.ts  auth.ts  content.ts  packages.ts  profile.ts  tasks.ts  wallet.ts
backend-api/src/utils/: jwtUtils.ts  logger.ts  seed.ts
backend-api/tests/: conftest.py  test_health.py
flirt-bot/: Dockerfile  README.md  bot_listener.py  healthcheck.py  pyproject.toml  requirements.txt  session_generator.py
flirt-bot/src/api/: backend.py  task_api.py
flirt-bot/src/core/: bot_commands.py  config.py
flirt-bot/src/tasks/: base_task.py  task_factory.py  task_manager.py  verification_engine.py
flirt-bot/src/utils/: json_logger.py  logger.py  (+2 more)
(+237 files in other folders)
