[tool.poetry]
name = "onlyvips"
version = "1.0.0"
description = "OnlyVips - Telegram tabanlı premium içerik platformu"
authors = ["SiyahKare <info@onlyvips.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
telethon = "^1.29.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.8.5"
asyncio = "^3.4.3"
colorama = "^0.4.6"
cryptg = "^0.4.0"
openai = "^1.3.5"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint]
max-line-length = 88
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "C0330", # bad-continuation
    "C0326", # bad-whitespace
] 