[tool.poetry]
name = "onlyvips-backend-api"
version = "0.7.0"
description = "OnlyVips Backend API - Telegram tabanli premium icerik platformu"
authors = ["SiyahKare <info@onlyvips.xyz>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 