[tool.poetry]
name = "onlyvips-flirt-bot"
version = "0.5.0"
description = "OnlyVips Flirt Bot - Telegram premium içerik platformu bot bileşeni"
authors = ["SiyahKare <info@onlyvips.xyz>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
telethon = "^1.29.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.8.5"
asyncio = "^4.0.0"
colorama = "^0.4.6"
cryptg = "^0.4.0"
openai = "^1.3.5"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "src.bot_listener:main" 